--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2 class="title_big">это просто!</h2>
                 <div class="line"></div>
             </div>
-            <h2 class="title">Куда сложнее сделать это правильно!</h2>
+            <h2 class="title">Куда сложнее сделать это правильно</h2>
 
             <div class="promo_text">
                 Ежедневно в России появляется более 5 000 новых сайтов.<br>
